--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
     <h2 class="w3-wide">CRACK THE CODE</h2>
    
-    <p class="w3-justify">Intructions.</p>
+    <p class="w3-justify"></p>
     
 		
 		<form>
